Updated resume for end of semester.

--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 Dean's High Honors (All Semesters) \\
 University Scholar \\
 National Merit Scholar \\
-\location{ Cum. GPA: 3.9 / 4.0 \\
+\location{ Cum. GPA: 3.961 / 4.0 \\
 Major GPA: 4.0 / 4.0}
 
 \sectionspace % Some whitespace after the section
@@ -87,11 +87,11 @@ Bitbucket:// \href{https://bitbucket.org/brenns10}{\bf brenns10} \\
 
 \section{Coursework}
 
-\subsection{Current}
+\subsection{Future}
 
-Linear Algebra \\
-Software Craftsmanship \\
-Networking
+Computer Architecture \\
+Programming Language Concepts \\
+Computer Security
 
 \sectionspace % Some whitespace after the section
 
@@ -99,12 +99,13 @@ Networking
 
 \subsection{Completed}
 
+Software Craftsmanship \\
+Networking \\
 Operating Systems \\
 Databases \\
 Theoretical Computer Science \\
 Artificial Intelligence \\
-Algorithms \\
-Discrete Mathematics
+Algorithms
 
 
 \sectionspace % Some whitespace after the section
@@ -118,18 +119,18 @@ Discrete Mathematics
 \subsection{Programming}
 
 \location{Over 5000 lines:}
-Python \textbullet{} C \textbullet{} Java  \textbullet{} \LaTeX\ \\
+Python \textbullet{} C \textbullet{} C++ \textbullet{} Java \textbullet{} \LaTeX \\
 \location{Over 1000 lines:}
-C++ \textbullet{} Javascript \textbullet{} PHP \\
+Javascript \textbullet{} PHP \textbullet{} C\# \\
 \location{Familiar:}
-C\# \textbullet{} SQL \textbullet{} Bash \textbullet{} HTML \textbullet{} CSS
+SQL \textbullet{} Bash \textbullet{} HTML \textbullet{} CSS \textbullet{} Batch \textbullet{} C++/CLI
 
 \sectionspace % Some whitespace after the section
 
 \subsection{Technologies}
 
 NumPy/Scipy/Pandas \textbullet{} Django \textbullet{} Flask \\
-Windows Installer XML
+Windows Installer XML \textbullet{} .NET \textbullet{}
 
 %-------------------------------------------------------------------------------
 
@@ -173,8 +174,9 @@ Windows Installer XML
 \location{June 2011 – Present | St. Joseph, MI}
 \begin{tightitemize}
 \item Self taught PHP and SQL to build secure upload and download system.
-\item Chose and implemented a file sharing service company-wide.
-\item Provided support to employees.
+\item Researched, selected, and implemented commercial grade solutions
+  for file sharing and email systems.
+\item Manage file sharing, email, and provide support to employees.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -204,17 +206,18 @@ Results not yet published.
 \section{Leadership}
 
 \runsubsection{Eta Kappa Nu}
-\descript{| Webmaster}
 
-\location{March 2014 – Present | Cleveland, OH}
-
-Created an entire new website from scratch:
-\textbf{\href{https://hkn.case.edu}{hkn.case.edu}}.  Implemented a
-professor-approved online exam archive based on student uploads.  Restricted
-upload and access rights to CWRU students through Central Authentication Service
-(CAS).  Used Python and Django framework.
-
-Elected President in Fall 2014.  Expected to take office in December 2014.
+\location{President | December 2014 – Present}
+\location{Webmaster | March 2014 – December 2014}
+\begin{tightitemize}
+\item Created an entire new website from scratch:
+  \textbf{\href{https://hkn.case.edu}{hkn.case.edu}}.  Implemented a
+  professor-approved online exam archive based on student uploads.  Restricted
+  upload and access rights to CWRU students through Central Authentication
+  Service (CAS).  Used Python and Django framework.
+\item Led study sessions for undergraduate Data Structures and Algorithms
+  classes.
+\end{tightitemize}
 
 \sectionspace % Some whitespace after the section
 
