Updated courses, graduation date.  Moved links.  Fixed verb tense.

--- a/resume.tex
+++ b/resume.tex
@@ -49,8 +49,8 @@
 \subsection{Case Western Reserve}
 \subsection{University}
 
-\descript{BS in Computer Science}
-\location{Expected May 2016 | Cleveland, OH}
+\descript{BS/MS in Computer Science}
+\location{Expected May 2017 | Cleveland, OH}
 Dean's High Honors (All Semesters) \\
 University Scholar \\
 National Merit Scholar \\
@@ -71,23 +71,12 @@ National AP Scholar \\
 \sectionspace % Some whitespace after the section
 
 %------------------------------------------------
-% Links
-%------------------------------------------------
-
-\section{Links}
-
-Github:// \href{https://github.com/brenns10}{\bf brenns10} \\
-Bitbucket:// \href{https://bitbucket.org/brenns10}{\bf brenns10} \\
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
 % Coursework
 %------------------------------------------------
 
 \section{Coursework}
 
-\subsection{Future}
+\subsection{Current}
 
 Computer Architecture \\
 Programming Language Concepts \\
@@ -107,6 +96,17 @@ Theoretical Computer Science \\
 Artificial Intelligence \\
 Algorithms
 
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+% Links
+%------------------------------------------------
+
+\section{Links}
+
+Github:// \href{https://github.com/brenns10}{\bf brenns10} \\
+Bitbucket:// \href{https://bitbucket.org/brenns10}{\bf brenns10} \\
 
 \sectionspace % Some whitespace after the section
 
@@ -159,7 +159,6 @@ Windows Installer XML \textbullet{} .NET \textbullet{}
   computing to develop a feature in production code for the main software
   product.
 \item Gained experience writing GPU-accelerated programs in Microsoft C++ AMP.
-\item Tested software, verified that bugs were fixed, and found new bugs.
 \item Developed Windows Installers for the company's main products.
 \item Wrote Python build scripts.
 \end{tightitemize}
@@ -188,14 +187,17 @@ Windows Installer XML \textbullet{} .NET \textbullet{}
 \section{Research}
 
 \runsubsection{Case Western Reserve University}
-\descript{| Undergraduate Researcher}
+\descript{| Researcher}
 
-\location{May 2014 – Present | Cleveland, OH} Working with
-\textbf{\href{http://engineering.case.edu/profiles/mxk331}{Prof Mehmet
-    Koyuturk}} and \textbf{Matthew Ruffalo} to create a tool that analyzes
-binary combinations of somatic mutations in cancer patients to discover
-relationships with various phenotypes.  Using Python and the NumPy/SciPy stack.
-Results not yet published.
+\location{May 2014 – Present | Cleveland, OH}
+
+\begin{tightitemize}
+\item Creating a tool that analyzes binary combinations of somatic mutations in
+  cancer patients to discover relationships with various phenotypes.
+\item Using Python, Pandas, NumPy.
+\item Applying knowledge of information theory, graph algorithms, and data
+  visualization.
+\end{tightitemize}
 
 \sectionspace % Some whitespace after the section
 
@@ -215,7 +217,7 @@ Results not yet published.
   professor-approved online exam archive based on student uploads.  Restricted
   upload and access rights to CWRU students through Central Authentication
   Service (CAS).  Used Python and Django framework.
-\item Led study sessions for undergraduate Data Structures and Algorithms
+\item Lead study sessions for undergraduate Data Structures and Algorithms
   classes.
 \end{tightitemize}
 
