Minor updates for finishing GMTM, new classes, etc.

--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 
 \documentclass[letterpaper]{deedy-resume} % Use US Letter paper, change to
                                           % a4paper for A4
-
+\newcommand{\bul}{\textbullet{}}
 \begin{document}
 
 %-------------------------------------------------------------------------------
@@ -78,9 +78,9 @@ National AP Scholar \\
 
 \subsection{Current}
 
-Computer Architecture \\
-Programming Language Concepts \\
-Computer Security
+Machine Learning \bul
+Advanced Algorithms \bul
+Software Engineering
 
 \sectionspace % Some whitespace after the section
 
@@ -88,12 +88,14 @@ Computer Security
 
 \subsection{Completed}
 
-Software Craftsmanship \\
-Networking \\
-Operating Systems \\
-Databases \\
-Theoretical Computer Science \\
-Artificial Intelligence \\
+Computer Architecture \bul
+Computer Security \bul
+Software Craftsmanship \bul
+Networking \bul
+Operating Systems \bul
+Databases \bul
+Theoretical Computer Science \bul
+Artificial Intelligence \bul
 Algorithms
 
 
@@ -119,18 +121,23 @@ Bitbucket:// \href{https://bitbucket.org/brenns10}{\bf brenns10} \\
 \subsection{Programming}
 
 \location{Over 5000 lines:}
-Python \textbullet{} C \textbullet{} C++ \textbullet{} Java \textbullet{} \LaTeX \\
+
+Python \bul C \bul C++ \bul Java \bul \LaTeX
+
 \location{Over 1000 lines:}
-Javascript \textbullet{} PHP \textbullet{} C\# \\
+
+Javascript \bul PHP \bul C\# \bul Scheme
+
 \location{Familiar:}
-SQL \textbullet{} Bash \textbullet{} HTML \textbullet{} CSS \textbullet{} Batch \textbullet{} C++/CLI
+
+SQL \bul Bash \bul HTML \bul CSS \bul Batch \bul C++/CLI
 
 \sectionspace % Some whitespace after the section
 
 \subsection{Technologies}
 
-NumPy/Scipy/Pandas \textbullet{} Django \textbullet{} Flask \\
-Windows Installer XML \textbullet{} .NET \textbullet{}
+Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
+\bul .NET
 
 %-------------------------------------------------------------------------------
 
@@ -170,12 +177,12 @@ Windows Installer XML \textbullet{} .NET \textbullet{}
 \runsubsection{Global Mold Tech Management}
 \descript{| Webmaster}
 
-\location{June 2011 – Present | St. Joseph, MI}
+\location{June 2011 – June 2015 | St. Joseph, MI}
 \begin{tightitemize}
 \item Self taught PHP and SQL to build secure upload and download system.
 \item Researched, selected, and implemented commercial grade solutions
   for file sharing and email systems.
-\item Manage file sharing, email, and provide support to employees.
+\item Managed file sharing, email, and provided support to employees.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -212,7 +219,7 @@ Windows Installer XML \textbullet{} .NET \textbullet{}
 \location{President | December 2014 – Present}
 \location{Webmaster | March 2014 – December 2014}
 \begin{tightitemize}
-\item Created an entire new website from scratch:
+\item Created a new website from scratch:
   \textbf{\href{https://hkn.case.edu}{hkn.case.edu}}.  Implemented a
   professor-approved online exam archive based on student uploads.  Restricted
   upload and access rights to CWRU students through Central Authentication
