--- a/resume.tex
+++ b/resume.tex
@@ -78,9 +78,8 @@ National AP Scholar \\
 
 \subsection{Current}
 
-Machine Learning \bul
-Advanced Algorithms \bul
-Software Engineering
+Internet Security \bul
+Data Mining
 
 \sectionspace % Some whitespace after the section
 
@@ -88,15 +87,15 @@ Software Engineering
 
 \subsection{Completed}
 
+Machine Learning \bul
+Advanced Algorithms \bul
+Software Engineering \bul
 Computer Architecture \bul
 Computer Security \bul
-Software Craftsmanship \bul
 Networking \bul
 Operating Systems \bul
 Databases \bul
-Theoretical Computer Science \bul
-Artificial Intelligence \bul
-Algorithms
+Theoretical Computer Science
 
 
 \sectionspace % Some whitespace after the section
