--- a/resume.tex
+++ b/resume.tex
@@ -29,8 +29,8 @@
 \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Stephen}{Brennan}{
-\urlstyle{same}\url{http://stephen-brennan.com} \\
-\href{mailto:stephen.brennan@case.edu}{stephen.brennan@case.edu} | 269.759.9829
+\urlstyle{same}\url{http://brennan.io} |
+\href{mailto:stephen@brennan.io}{stephen@brennan.io} | 269.759.9829
 }
 
 %-------------------------------------------------------------------------------
