Update resume for end of semester, awards, etc.

--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 Dean's High Honors (All Semesters) \\
 University Scholar \\
 National Merit Scholar \\
-\location{ Cum. GPA: 3.967 / 4.0 \\
+\location{ Cum. GPA: 3.974 / 4.0 \\
 Major GPA: 4.0 / 4.0}
 
 \sectionspace % Some whitespace after the section
@@ -76,10 +76,10 @@ National AP Scholar \\
 
 \section{Coursework}
 
-\subsection{Current}
+\subsection{Upcoming}
 
-Internet Security \bul
-Data Mining
+Database Systems (Graduate) \bul
+Number Theory
 
 \sectionspace % Some whitespace after the section
 
@@ -87,6 +87,8 @@ Data Mining
 
 \subsection{Completed}
 
+Internet Security \bul
+Data Mining \bul
 Machine Learning \bul
 Advanced Algorithms \bul
 Software Engineering \bul
@@ -94,7 +96,6 @@ Computer Architecture \bul
 Computer Security \bul
 Networking \bul
 Operating Systems \bul
-Databases \bul
 Theoretical Computer Science
 
 
@@ -195,13 +196,13 @@ Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
 \runsubsection{Case Western Reserve University}
 \descript{| Researcher}
 
-\location{May 2014 – Present | Cleveland, OH}
+\location{May 2014 – September 2015 | Cleveland, OH}
 
 \begin{tightitemize}
-\item Creating a tool that analyzes binary combinations of somatic mutations in
+\item Created a tool that analyzes binary combinations of somatic mutations in
   cancer patients to discover relationships with various phenotypes.
-\item Using Python, Pandas, NumPy.
-\item Applying knowledge of information theory, graph algorithms, and data
+\item Used Python, Pandas, NumPy.
+\item Applied knowledge of information theory, graph algorithms, and data
   visualization.
 \end{tightitemize}
 
@@ -233,27 +234,18 @@ Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
 % Awards
 %------------------------------------------------
 
-\section{Awards}
+\section{Awards \& Honors}
 
 \begin{tabular}{rll}
+2016 & Jennings Award for excellence in Computer Engineering and Science \\
+2015 & EECS Research Award \\
+2014 & Eta Kappa Nu EECS Honor Society\\
 2013 & Case Alumni Association Scholarship \\
+2013 & Tau Beta Pi Engineering Honor Society\\
 2012 & Case Western Reserve University Scholar \\
 2012 & National Merit Scholar \\
-2012 & National AP Scholar
-\end{tabular}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-% Societies
-%------------------------------------------------
-
-\section{Societies}
-
-\begin{tabular}{rl}
-2014 & Eta Kappa Nu EECS Honor Society\\
-2013 & Tau Beta Pi Engineering Honor Society\\
-2010 & National Honor Society \\
+2012 & National AP Scholar \\
+2010 & National Honor Society
 \end{tabular}
 
 \sectionspace % Some whitespace after the section
