Update resume after Yelp internship!

--- a/resume.tex
+++ b/resume.tex
@@ -64,7 +64,6 @@ Major GPA: 4.0 / 4.0}
 \subsection{St. Joseph High School}
 
 \location{Grad. May 2012 | St. Joseph, MI}
-Class Rank: 5\textsuperscript{th} \\
 National AP Scholar \\
 \location{ Cum. GPA: 3.975 / 4.0 }
 
@@ -78,7 +77,7 @@ National AP Scholar \\
 
 \subsection{Upcoming}
 
-Database Systems (Graduate) \bul
+Database Systems (Graduate) \\%\bul
 Number Theory
 
 \sectionspace % Some whitespace after the section
@@ -87,15 +86,15 @@ Number Theory
 
 \subsection{Completed}
 
-Internet Security \bul
-Data Mining \bul
-Machine Learning \bul
-Advanced Algorithms \bul
-Software Engineering \bul
-Computer Architecture \bul
-Computer Security \bul
-Networking \bul
-Operating Systems \bul
+Internet Security \\%\bul
+Data Mining \\%\bul
+Machine Learning \\%\bul
+Advanced Algorithms \\%\bul
+Software Engineering \\%\bul
+Computer Architecture \\%\bul
+Computer Security \\%\bul
+Networking \\%\bul
+Operating Systems \\%\bul
 Theoretical Computer Science
 
 
@@ -120,24 +119,24 @@ Bitbucket:// \href{https://bitbucket.org/brenns10}{\bf brenns10} \\
 
 \subsection{Programming}
 
-\location{Over 5000 lines:}
+\location{Very Experienced:}
 
-Python \bul C \bul C++ \bul Java \bul \LaTeX
+Python \bul C \bul C++
 
-\location{Over 1000 lines:}
+\location{Some Experience:}
 
-Javascript \bul PHP \bul C\# \bul Scheme
+Java \bul Javascript \bul C\# \bul Scheme \bul SQL
 
 \location{Familiar:}
 
-SQL \bul Bash \bul HTML \bul CSS \bul Batch \bul C++/CLI
+Bash \bul HTML \bul CSS \bul PHP \bul C++/CLI
 
 \sectionspace % Some whitespace after the section
 
 \subsection{Technologies}
 
-Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
-\bul .NET
+Git \bul NumPy \bul Scipy \bul Pandas \bul Scikit Learn \bul Django \bul Flask
+\bul Windows Installer XML
 
 %-------------------------------------------------------------------------------
 
@@ -156,11 +155,46 @@ Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
 
 \section{Experience}
 
+\runsubsection{Yelp}
+\descript{| Intern, Spam Team}
+
+\location{May 2016 – August 2016 | San Francisco, CA}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+
+\begin{tightitemize}
+\item Improved user security by blocking messages containing dangerous URLs.
+\item Researched new features for improving URL spam classifications in machine
+  learning classifiers.
+\item Migrated credit card transaction blocking systems to a service oriented
+  architecture.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{Case Western Reserve University}
+\descript{| Researcher}
+
+\location{May 2014 – September 2015 | Cleveland, OH}
+
+\begin{tightitemize}
+\item Created a tool that analyzes binary combinations of somatic mutations in
+  cancer patients to discover relationships with various phenotypes.
+\item Used Python, Pandas, NumPy.
+\item Applied knowledge of information theory, graph algorithms, and data
+  visualization.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
 \runsubsection{LECO}
-\descript{| Software Development Intern}
+\descript{| Intern}
 
 \location{May 2013 – August 2013 | St. Joseph, MI}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Applied knowledge of C++, graph traversal algorithms, and parallel
   computing to develop a feature in production code for the main software
@@ -190,23 +224,6 @@ Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
 %------------------------------------------------
 % Research
 %------------------------------------------------
-
-\section{Research}
-
-\runsubsection{Case Western Reserve University}
-\descript{| Researcher}
-
-\location{May 2014 – September 2015 | Cleveland, OH}
-
-\begin{tightitemize}
-\item Created a tool that analyzes binary combinations of somatic mutations in
-  cancer patients to discover relationships with various phenotypes.
-\item Used Python, Pandas, NumPy.
-\item Applied knowledge of information theory, graph algorithms, and data
-  visualization.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
 
 %------------------------------------------------
 % Leadership
@@ -240,12 +257,8 @@ Git \bul NumPy/Scipy/Pandas \bul Django \bul Flask \bul Windows Installer XML
 2016 & Jennings Award for excellence in Computer Engineering and Science \\
 2015 & EECS Research Award \\
 2014 & Eta Kappa Nu EECS Honor Society\\
-2013 & Case Alumni Association Scholarship \\
 2013 & Tau Beta Pi Engineering Honor Society\\
-2012 & Case Western Reserve University Scholar \\
-2012 & National Merit Scholar \\
-2012 & National AP Scholar \\
-2010 & National Honor Society
+2012 & National Merit Scholar
 \end{tabular}
 
 \sectionspace % Some whitespace after the section
