update website to HTTPS

--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
 \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Stephen}{Brennan}{
-\urlstyle{same}\url{http://brennan.io} |
+\urlstyle{same}\url{https://brennan.io} |
 \href{mailto:stephen@brennan.io}{stephen@brennan.io} | 269.759.9829
 }
 
