Remove phone number (omg), update with graduation stuff

--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 
 \namesection{Stephen}{Brennan}{
 \urlstyle{same}\url{https://brennan.io} |
-\href{mailto:stephen@brennan.io}{stephen@brennan.io} | 269.759.9829
+\href{mailto:stephen@brennan.io}{stephen@brennan.io}
 }
 
 %-------------------------------------------------------------------------------
@@ -49,13 +49,14 @@
 \subsection{Case Western Reserve}
 \subsection{University}
 
-\descript{BS/MS in Computer Science}
-\location{Expected May 2017 | Cleveland, OH}
-Dean's High Honors (All Semesters) \\
-University Scholar \\
-National Merit Scholar \\
-\location{ Cum. GPA: 3.974 / 4.0 \\
-Major GPA: 4.0 / 4.0}
+\descript{BS in Computer Science}
+\location{May 2017 | Cleveland, OH}
+Graduated Summa Cum Laude \\
+Cum. GPA: 3.97 / 4.0 \\
+Major GPA: 4.0 / 4.0 \\
+\sectionspace
+\descript{MS in Computing and Information Science}
+\location{Expected August 2017}
 
 \sectionspace % Some whitespace after the section
 
@@ -65,7 +66,7 @@ Major GPA: 4.0 / 4.0}
 
 \location{Grad. May 2012 | St. Joseph, MI}
 National AP Scholar \\
-\location{ Cum. GPA: 3.975 / 4.0 }
+\location{ Cum. GPA: 3.98 / 4.0 }
 
 \sectionspace % Some whitespace after the section
 
@@ -75,17 +76,10 @@ National AP Scholar \\
 
 \section{Coursework}
 
-\subsection{Upcoming}
-
-Database Systems (Graduate) \\%\bul
-Number Theory
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
 \subsection{Completed}
 
+Database Systems (Graduate) \\%\bul
+Number Theory \\
 Internet Security \\%\bul
 Data Mining \\%\bul
 Machine Learning \\%\bul
@@ -121,22 +115,22 @@ Bitbucket:// \href{https://bitbucket.org/brenns10}{\bf brenns10} \\
 
 \location{Very Experienced:}
 
-Python \bul C \bul C++
+Python \bul C \bul Go
 
 \location{Some Experience:}
 
-Java \bul Javascript \bul C\# \bul Scheme \bul SQL
+Javascript \bul C++ \bul SQL
 
 \location{Familiar:}
 
-Bash \bul HTML \bul CSS \bul PHP \bul C++/CLI
+HTML \bul CSS \bul Java \bul C\#
 
 \sectionspace % Some whitespace after the section
 
 \subsection{Technologies}
 
-Git \bul NumPy \bul Scipy \bul Pandas \bul Scikit Learn \bul Django \bul Flask
-\bul Windows Installer XML
+Git \bul Bash \bul NumPy \bul SciPy \bul Pandas \bul Flask \bul Linux Kernel
+\bul Netlink \bul Iptables \bul Multipath TCP
 
 %-------------------------------------------------------------------------------
 
@@ -233,7 +227,7 @@ Git \bul NumPy \bul Scipy \bul Pandas \bul Scikit Learn \bul Django \bul Flask
 
 \runsubsection{Eta Kappa Nu}
 
-\location{President | December 2014 – Present}
+\location{President | December 2014 – December 2016}
 \location{Webmaster | March 2014 – December 2014}
 \begin{tightitemize}
 \item Created a new website from scratch:
@@ -254,6 +248,7 @@ Git \bul NumPy \bul Scipy \bul Pandas \bul Scikit Learn \bul Django \bul Flask
 \section{Awards \& Honors}
 
 \begin{tabular}{rll}
+2017 & William L. Everitt Award \\
 2016 & Jennings Award for excellence in Computer Engineering and Science \\
 2015 & EECS Research Award \\
 2014 & Eta Kappa Nu EECS Honor Society\\
